--- a/plugins/greatermedia-contest-restriction/package.json
+++ b/plugins/greatermedia-contest-restriction/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "greater-media-contest-restriction",
-  "title": "Greater Media Contest Restriction",
-  "description": "Plugin will give option to promotions manager to restirct contests number of entries per person, per time duration, and/or by age.",
+  "name": "greatermedia-contest-restriction",
+  "title": "GreaterMedia Contest Restriction",
+  "description": "Adds options to restrict contest",
   "version": "0.0.1",
   "homepage": "http://wordpress.org/plugins",
   "author": {
     "name": "10up",
-    "email": "eduard.maghakyan@10up.com",
-    "url": "http://10up.com"
+    "email": "eduard@10up.com"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
@@ -20,7 +19,7 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-compress": "~0.5.2",
-    "grunt-contrib-sass": "~0.2.2"
+    "grunt-contrib-sass": "~0.8.1"
   },
   "keywords": []
 }
